--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set_target_properties(${PROJECT_NAME}
     PROPERTIES
         POSITION_INDEPENDENT_CODE TRUE
 )
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_11)
 
 install(DIRECTORY inc/
     DESTINATION ${CMAKE_INSTALL_PREFIX}/segue/include)
@@ -30,7 +31,7 @@ install(TARGETS ${PROJECT_NAME}
     DESTINATION ${CMAKE_INSTALL_PREFIX}/segue/lib)
 
 if(BUILD_UNITTEST)
-    #add_subdirectory(test)
+    #TODO: add_subdirectory(test)
     add_subdirectory(demo)
 endif()
 
